--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -10,49 +10,17 @@
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
   <!-- Custom styles for this template -->
-  <link href="./styles/admin.css" rel="stylesheet">
+  <link href="../../styles/admin.css" rel="stylesheet">
   <!--Bootstrap template css-->
-  <link href="./styles/bootstrapTemplate.css"  rel="stylesheet">
+  <link href="../../styles/bootstrapTemplate.css" rel="stylesheet">
 </head>
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-              aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Form Maker</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="./register.html">Register</a></li>
-        <li><a href="./login.html">Login</a></li>
-        <li><a href="#">Username</a></li>
-        <li><a href="#">Logout</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-3 col-md-2 sidebar">
-      <ul class="nav nav-sidebar">
-        <li><a href="./home.html">Home</a></li>
-        <li><a href="./profile.html">Profile</a></li>
-        <li class="active"><a href="#">Admin</a></li>
-        <li><a href="./forms.html">Forms</a></li>
-      </ul>
-    </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h1 class="page-header">Admin</h1>
       <table class="table table-striped">
+        <h1 class="page-header">Admin</h1>
         <caption>Users</caption>
         <thead>
         <tr>
