--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,8 +1,8 @@
-<div class="col-sm-3 col-md-2 sidebar">
+<div class="sidebar" ng-controller="SidebarController">
   <ul class="nav nav-sidebar">
-    <li><a href="../home/home.view.html">Home</a></li>
-    <li><a href="../users/profile.view.html">Profile</a></li>
-    <li><a href="#">Admin</a></li>
-    <li><a href="../forms/forms.view.html">Forms</a></li>
+    <li ng-class="{active: active}" ><a href="#/home">Home</a></li>
+    <li ng-if="user"><a href="#/profile">Profile</a></li>
+    <li ng-if="user"><a href="#/forms">Forms</a></li>
+    <li ng-if="user && user.admin"><a href="#/admin">Admin</a></li>
   </ul>
 </div>
