Add and remove fields

--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -2,11 +2,11 @@
   <div>
     <h1 class="page-header">Forms</h1>
     <ul class="nav nav-tabs">
-      <li class="" role="presentation">
-        <a href="#">Forms</a>
-      </li>
       <li class="active" role="presentation">
-        <a href="form-fields.view.html">Fields</a>
+        <a>Forms</a>
+      </li>
+      <li role="presentation">
+        <a href="#/form-fields">Fields</a>
       </li>
     </ul>
     <table class="table table-striped">
