--- a/public/assignment/client/views/forms/form-fields.view.html
+++ b/public/assignment/client/views/forms/form-fields.view.html
@@ -1,169 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-        integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-  <!-- Custom styles for this template -->
-  <link href="../../styles/form-fields.css" rel="stylesheet">
-  <!--Bootstrap template css-->
-  <link href="../../styles/bootstrapTemplate.css" rel="stylesheet">
-</head>
-
-<body>
-
 <div class="container-fluid">
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">Forms: Registration Form</h1>
+  <div>
+    <h1 class="page-header">Forms: Form Fields</h1>
     <ul class="nav nav-tabs">
-      <li class="active" role="presentation">
-        <a href="forms.view.html">Forms</a>
-      </li>
       <li class="" role="presentation">
-        <a href="#">Fields</a>
+        <a href="#/forms">Forms</a>
+      </li>
+      <li class="active" role="presentation">
+        <a>Fields</a>
       </li>
     </ul>
     <form class="clearfix">
-      <div>
-        <div class="form-group col-md-9">
-          <label for="firstName">First Name:</label>
-          <input type="text" class="form-control" id="firstName" placeholder="First Name">
-        </div>
-        <div class="icons col-md-3">
-          <i class="glyphicon glyphicon-pencil"></i>
-          <i class="glyphicon glyphicon-plus"></i>
-          <i class="glyphicon glyphicon-remove"></i>
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </div>
-      </div>
-      <div>
-        <div class="form-group col-md-9">
-          <label for="lastName">Last Name:</label>
-          <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-        </div>
-        <div class="icons col-md-3">
-          <i class="glyphicon glyphicon-pencil"></i>
-          <i class="glyphicon glyphicon-plus"></i>
-          <i class="glyphicon glyphicon-remove"></i>
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </div>
-      </div>
-      <div>
-        <div class="form-group col-md-9">
-          <label>Date of Birth:</label>
-          <select class="form-control">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
-        </div>
-        <div class="icons col-md-3">
-          <i class="glyphicon glyphicon-pencil"></i>
-          <i class="glyphicon glyphicon-plus"></i>
-          <i class="glyphicon glyphicon-remove"></i>
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </div>
-      </div>
-      <div>
-        <div class="form-group col-md-9">
-          <label>Gender</label>
-          <select class="form-control">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
-        </div>
-        <div class="icons col-md-3">
-          <i class="glyphicon glyphicon-pencil"></i>
-          <i class="glyphicon glyphicon-plus"></i>
-          <i class="glyphicon glyphicon-remove"></i>
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </div>
-      </div>
-      <div>
-        <div class="form-group col-md-9">
-          <label>Roles:</label>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" value="">
-              Admin
-            </label>
+      <div ng-repeat="field in fields">
+        <div ng-switch="field.type">
+          <div class="form-group col-md-9" ng-switch-when="TEXT">
+            <label>{{field.label}}</label>
+            <input type="text" class="form-control" placeholder="{{field.placeholder}}">
           </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" value="" disabled>
-              Student
-            </label>
+          <div class="form-group col-md-9" ng-switch-when="TEXTAREA">
+            <label>{{field.label}}</label>
+            <textarea type="text" class="form-control" placeholder="{{field.placeholder}}"></textarea>
           </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" value="" disabled>
-              User
-            </label>
+          <div class="form-group col-md-9" ng-switch-when="DATE">
+            <label>{{field.label}}</label>
+            <input type="date" class="form-control">
+          </div>
+          <div class="form-group col-md-9" ng-switch-when="OPTIONS">
+            <label>{{field.label}}</label>
+            <select class="form-control">
+              <option ng-repeat="option in field.options">{{option.label}}</option>
+            </select>
+          </div>
+          <div class="form-group col-md-9" ng-switch-when="CHECKBOXES">
+            <label>{{field.label}}</label>
+            <div class="checkbox" ng-repeat="option in field.options">
+              <label>
+                <input type="checkbox" value="">
+                {{option.label}}
+              </label>
+            </div>
+          </div>
+          <div class="form-group col-md-9" ng-switch-default>
+            <label>{{field.label}}</label>
+            <div class="radio" ng-repeat="option in field.options">
+              <label>
+                <input type="radio" value="">
+                {{option.label}}
+              </label>
+            </div>
           </div>
         </div>
         <div class="icons col-md-3">
           <i class="glyphicon glyphicon-pencil"></i>
-          <i class="glyphicon glyphicon-plus"></i>
-          <i class="glyphicon glyphicon-remove"></i>
-          <i class="glyphicon glyphicon-align-justify"></i>
-        </div>
-      </div>
-      <div>
-        <div class="form-group col-md-9">
-          <label>License Agreement:</label>
-          <div class="radio">
-            <label>
-              <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-              Yes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-              No
-            </label>
-          </div>
-        </div>
-        <div class="icons col-md-3">
-          <i class="glyphicon glyphicon-pencil"></i>
-          <i class="glyphicon glyphicon-plus"></i>
-          <i class="glyphicon glyphicon-remove"></i>
-          <i class="glyphicon glyphicon-align-justify"></i>
+          <i class="glyphicon glyphicon-remove" ng-click="removeField(field)"></i>
         </div>
       </div>
     </form>
     <div>
       <div class="form-group col-md-9">
         <label>Add New Field:</label>
-        <select class="form-control">
-          <option>Single Line Text</option>
+        <select class="form-control" ng-model="fieldType">
+          <option value="TEXT">Single Line Text</option>
+          <option value="TEXTAREA">Multi Line Text Field</option>
+          <option value="DATE">Date Field</option>
+          <option value="OPTIONS">Dropdown Field</option>
+          <option value="CHECKBOXES">Checkboxes Field</option>
+          <option value="RADIOS">Radio Buttons Field</option>
         </select>
       </div>
       <div class="icons col-md-3">
-        <i class="glyphicon glyphicon-plus"></i>
+        <i class="glyphicon glyphicon-plus" ng-click="addField()"></i>
       </div>
     </div>
   </div>
 </div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-        crossorigin="anonymous"></script>
-</body>
-</html>
