--- a/public/assignment/client/views/forms/form-fields.view.html
+++ b/public/assignment/client/views/forms/form-fields.view.html
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="icons col-md-3">
-          <i class="glyphicon glyphicon-pencil"></i>
+          <i class="glyphicon glyphicon-pencil" ng-click="openEditModal(field)"></i>
           <i class="glyphicon glyphicon-remove" ng-click="removeField(field)"></i>
         </div>
       </div>
