--- a/public/project/client/views/events/manage.view.html
+++ b/public/project/client/views/events/manage.view.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="manage">
   <div class="col-md-6 col-md-offset-3">
-    <h1 class="page-header">Browse</h1>
+    <h1 class="page-header">Manage</h1>
     <table class="table table-striped">
       <thead>
       <tr>
